// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericHeading should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GenericHeading
    heading="TEST"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(233,233,233)",
              "borderBottomWidth": 0.5,
              "paddingBottom": 26,
              "paddingTop": 34,
            }
          }
        >
          <YuText
            bold={true}
            numberOfLines={1}
            style={
              Object {
                "fontSize": 40,
              }
            }
          >
            TEST
          </YuText>
        </View>,
        undefined,
      ],
      "style": Object {
        "paddingHorizontal": 30,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            bold={true}
            numberOfLines={1}
            style={
              Object {
                "fontSize": 40,
              }
            }
          >
            TEST
          </YuText>,
          "style": Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(233,233,233)",
            "borderBottomWidth": 0.5,
            "paddingBottom": 26,
            "paddingTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "TEST",
            "numberOfLines": 1,
            "style": Object {
              "fontSize": 40,
            },
          },
          "ref": null,
          "rendered": "TEST",
          "type": [Function],
        },
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgb(233,233,233)",
                "borderBottomWidth": 0.5,
                "paddingBottom": 26,
                "paddingTop": 34,
              }
            }
          >
            <YuText
              bold={true}
              numberOfLines={1}
              style={
                Object {
                  "fontSize": 40,
                }
              }
            >
              TEST
            </YuText>
          </View>,
          undefined,
        ],
        "style": Object {
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              bold={true}
              numberOfLines={1}
              style={
                Object {
                  "fontSize": 40,
                }
              }
            >
              TEST
            </YuText>,
            "style": Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(233,233,233)",
              "borderBottomWidth": 0.5,
              "paddingBottom": 26,
              "paddingTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "TEST",
              "numberOfLines": 1,
              "style": Object {
                "fontSize": 40,
              },
            },
            "ref": null,
            "rendered": "TEST",
            "type": [Function],
          },
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`GenericHeading should render with a subheading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GenericHeading
    heading="TEST"
    subheading="subheading test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(233,233,233)",
              "borderBottomWidth": 0.5,
              "paddingTop": 34,
            }
          }
        >
          <YuText
            bold={true}
            numberOfLines={1}
            style={
              Object {
                "fontSize": 40,
              }
            }
          >
            TEST
          </YuText>
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingBottom": 26,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 24,
              }
            }
          >
            subheading test
          </YuText>
        </View>,
      ],
      "style": Object {
        "paddingHorizontal": 30,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            bold={true}
            numberOfLines={1}
            style={
              Object {
                "fontSize": 40,
              }
            }
          >
            TEST
          </YuText>,
          "style": Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(233,233,233)",
            "borderBottomWidth": 0.5,
            "paddingTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "TEST",
            "numberOfLines": 1,
            "style": Object {
              "fontSize": 40,
            },
          },
          "ref": null,
          "rendered": "TEST",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 24,
              }
            }
          >
            subheading test
          </YuText>,
          "style": Object {
            "alignItems": "center",
            "paddingBottom": 26,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "subheading test",
            "style": Object {
              "color": "rgb(51,51,51)",
              "fontSize": 24,
            },
          },
          "ref": null,
          "rendered": "subheading test",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgb(233,233,233)",
                "borderBottomWidth": 0.5,
                "paddingTop": 34,
              }
            }
          >
            <YuText
              bold={true}
              numberOfLines={1}
              style={
                Object {
                  "fontSize": 40,
                }
              }
            >
              TEST
            </YuText>
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "paddingBottom": 26,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 24,
                }
              }
            >
              subheading test
            </YuText>
          </View>,
        ],
        "style": Object {
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              bold={true}
              numberOfLines={1}
              style={
                Object {
                  "fontSize": 40,
                }
              }
            >
              TEST
            </YuText>,
            "style": Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(233,233,233)",
              "borderBottomWidth": 0.5,
              "paddingTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "TEST",
              "numberOfLines": 1,
              "style": Object {
                "fontSize": 40,
              },
            },
            "ref": null,
            "rendered": "TEST",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 24,
                }
              }
            >
              subheading test
            </YuText>,
            "style": Object {
              "alignItems": "center",
              "paddingBottom": 26,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "subheading test",
              "style": Object {
                "color": "rgb(51,51,51)",
                "fontSize": 24,
              },
            },
            "ref": null,
            "rendered": "subheading test",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`GenericHeading should render without a border 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GenericHeading
    heading="TEST"
    hidesBorder={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(233,233,233)",
              "borderBottomWidth": 0,
              "paddingBottom": 26,
              "paddingTop": 34,
            }
          }
        >
          <YuText
            bold={true}
            numberOfLines={1}
            style={
              Object {
                "fontSize": 40,
              }
            }
          >
            TEST
          </YuText>
        </View>,
        undefined,
      ],
      "style": Object {
        "paddingHorizontal": 30,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            bold={true}
            numberOfLines={1}
            style={
              Object {
                "fontSize": 40,
              }
            }
          >
            TEST
          </YuText>,
          "style": Object {
            "alignItems": "center",
            "borderBottomColor": "rgb(233,233,233)",
            "borderBottomWidth": 0,
            "paddingBottom": 26,
            "paddingTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "TEST",
            "numberOfLines": 1,
            "style": Object {
              "fontSize": 40,
            },
          },
          "ref": null,
          "rendered": "TEST",
          "type": [Function],
        },
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "borderBottomColor": "rgb(233,233,233)",
                "borderBottomWidth": 0,
                "paddingBottom": 26,
                "paddingTop": 34,
              }
            }
          >
            <YuText
              bold={true}
              numberOfLines={1}
              style={
                Object {
                  "fontSize": 40,
                }
              }
            >
              TEST
            </YuText>
          </View>,
          undefined,
        ],
        "style": Object {
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              bold={true}
              numberOfLines={1}
              style={
                Object {
                  "fontSize": 40,
                }
              }
            >
              TEST
            </YuText>,
            "style": Object {
              "alignItems": "center",
              "borderBottomColor": "rgb(233,233,233)",
              "borderBottomWidth": 0,
              "paddingBottom": 26,
              "paddingTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "TEST",
              "numberOfLines": 1,
              "style": Object {
                "fontSize": 40,
              },
            },
            "ref": null,
            "rendered": "TEST",
            "type": [Function],
          },
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
